--- a/tdd.html
+++ b/tdd.html
@@ -12,8 +12,12 @@
   <div id="qunit"></div>
 
   <script src="http://code.jquery.com/qunit/qunit-1.20.0.js"></script>
-  <script src="Hello.js"></script>
-  <script src="Hello_uppercase.js"></script>
-  <script src=""></script>
+  <script src="hello.js"></script>
+  <script src="hello_uppercase.js"></script>
+  <script src="hello_joe.js"></script>
+   <script src=""></script>
+    <script src=""></script>
+     <script src="tests.js"></script>
+      <script src=""></script>
 </body>
 </html>
