done wit my function

--- a/tdd.html
+++ b/tdd.html
@@ -10,14 +10,15 @@
 <body>
 
   <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
 
   <script src="http://code.jquery.com/qunit/qunit-1.20.0.js"></script>
   <script src="hello.js"></script>
   <script src="hello_uppercase.js"></script>
   <script src="hello_joe.js"></script>
-   <script src=""></script>
-    <script src=""></script>
+   <script src="number_list.js"></script>
+    <script src="sum_numbers.js"></script>
      <script src="tests.js"></script>
-      <script src=""></script>
+    
 </body>
 </html>
