--- a/tdd.html
+++ b/tdd.html
@@ -18,6 +18,8 @@
   <script src="hello_joe.js"></script>
    <script src="number_list.js"></script>
     <script src="sum_numbers.js"></script>
+    <script src="length.js"></script>
+    <script src="upper.js"></script>
      <script src="tests.js"></script>
     
 </body>
