--- a/tdd.html
+++ b/tdd.html
@@ -20,6 +20,7 @@
     <script src="sum_numbers.js"></script>
     <script src="length.js"></script>
     <script src="upper.js"></script>
+    <script src="reverse.js"></script>
      <script src="tests.js"></script>
     
 </body>
