--- a/tdd.html
+++ b/tdd.html
@@ -21,6 +21,7 @@
     <script src="length.js"></script>
     <script src="upper.js"></script>
     <script src="reverse.js"></script>
+    <script src="hello_list.js"></script>
      <script src="tests.js"></script>
     
 </body>
