--- a/tdd.html
+++ b/tdd.html
@@ -22,6 +22,7 @@
     <script src="upper.js"></script>
     <script src="reverse.js"></script>
     <script src="hello_list.js"></script>
+    <script src="high_low.js"></script>
      <script src="tests.js"></script>
     
 </body>
