--- a/tdd.html
+++ b/tdd.html
@@ -10,20 +10,21 @@
 <body>
 
   <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
+  <div  vvid="qunit-fixture"></div>
 
   <script src="http://code.jquery.com/qunit/qunit-1.20.0.js"></script>
-  <script src="hello.js"></script>
-  <script src="hello_uppercase.js"></script>
-  <script src="hello_joe.js"></script>
-   <script src="number_list.js"></script>
+    <script src="hello.js"></script>
+    <script src="hello_uppercase.js"></script>
+    <script src="hello_joe.js"></script>
+    <script src="number_list.js"></script>
     <script src="sum_numbers.js"></script>
     <script src="length.js"></script>
     <script src="upper.js"></script>
     <script src="reverse.js"></script>
     <script src="hello_list.js"></script>
     <script src="high_low.js"></script>
-     <script src="tests.js"></script>
+    <script src="count_words.js"></script>
+    <script src="tests.js"></script>
     
 </body>
 </html>
