committing the sum_words_len

--- a/tdd.html
+++ b/tdd.html
@@ -24,6 +24,7 @@
     <script src="hello_list.js"></script>
     <script src="high_low.js"></script>
     <script src="count_words.js"></script>
+    <script src="sum_words_len.js"></script>
     <script src="tests.js"></script>
     
 </body>
