--- a/tdd.html
+++ b/tdd.html
@@ -25,6 +25,7 @@
     <script src="high_low.js"></script>
     <script src="count_words.js"></script>
     <script src="sum_words_len.js"></script>
+    <script src="longest_word.js"></script>
     <script src="tests.js"></script>
     
 </body>
