stiil have to work on the shortest word

--- a/tdd.html
+++ b/tdd.html
@@ -26,6 +26,7 @@
     <script src="count_words.js"></script>
     <script src="sum_words_len.js"></script>
     <script src="longest_word.js"></script>
+    <script src="shortest_word.js"></script>
     <script src="tests.js"></script>
     
 </body>
