--- a/tdd.html
+++ b/tdd.html
@@ -27,6 +27,8 @@
     <script src="sum_words_len.js"></script>
     <script src="longest_word.js"></script>
     <script src="shortest_word.js"></script>
+    <script src="word_length.js"></script>
+    <script src="avg.js"></script>
     <script src="tests.js"></script>
     
 </body>
